--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=secure-message
+
+
+
+spring.datasource.url=jdbc:mysql://salenty-salenty.i.aivencloud.com:14639/secure_messaging
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_VFaABt_Lt3Jy3YZWIJ3
+spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=admin
+spring.security.user.password=admin123
