--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=secure-message
+spring.config.import=optional:file:env.properties
 
 
-
-spring.datasource.url=jdbc:mysql://salenty-salenty.i.aivencloud.com:14639/secure_messaging
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_VFaABt_Lt3Jy3YZWIJ3
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-
-spring.security.user.name=admin
-spring.security.user.password=admin123
