--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=secure-message
 spring.config.import=optional:file:env.properties
-
-
+server.port=443
+server.ssl.certificate=server/certs/server.crt
+server.ssl.certificate-private-key=server/certs/server.key
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
